--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -14,3 +14,7 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_OS: "False"
+          SHOW_LINES_OF_CODE: "True"
+          SHOW_TIMEZONE: "False"
+          SHOW_LOC_CHART: "False"
