--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -20,3 +20,4 @@ jobs:
           SHOW_LINES_OF_CODE: "True"
           SHOW_TIMEZONE: "False"
           SHOW_LOC_CHART: "False"
+          SHOW_PROFILE_VIEWS: "False"
